--- a/app-android/src/main/res/values/strings.xml
+++ b/app-android/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">android-project-template-2022</string>
+    <string name="app_name">DroidKaigi 2022</string>
 </resources>
