add empty features, tab init

--- a/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
@@ -1,1 +1,7 @@
 "Timetable.Title" = "Timetable";
+"About.Title" = "About DroidKaigi";
+"Notification.Title" = "Notification";
+"Map.Title" = "Floor Map";
+"Sponsor.Title" = "Sponsor";
+"Contributors.Title" = "Contributors";
+"Setting.Title" = "Setting";
