--- a/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
@@ -1,1 +1,7 @@
 "Timetable.Title" = "Timetable";
+"About.Title" = "DroidKaigiとは";
+"Notification.Title" = "お知らせ";
+"Map.Title" = "フロアマップ";
+"Sponsor.Title" = "スポンサー";
+"Contributors.Title" = "Contributors";
+"Setting.Title" = "Setting";
