--- a/feature-about/src/main/res/values-en/strings.xml
+++ b/feature-about/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="about_title">What is DroidKaigi?</string>
     <string name="about_description">DroidKaigiはエンジニアが主役のAndroidカンファレンスです。\nAndroid技術情報の共有とコミュニケーションを目的に、2022年10月5日(水)〜7日(金)の3日間開催します。</string>
-    <string name="about_access">会場アクセス</string>
-    <string name="about_staff">スタッフリスト</string>
-    <string name="about_privacy">プライバシーポリシー</string>
-    <string name="about_license">ライセンス</string>
+    <string name="about_access">Access</string>
+    <string name="about_staff">Staff List</string>
+    <string name="about_privacy">Privacy Policy</string>
+    <string name="about_license">License</string>
 </resources>
