--- a/feature-about/src/main/res/values/strings.xml
+++ b/feature-about/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_top_app_bar_title">DroidKaigiとは</string>
+    <string name="about_top_app_bar_title">What is DroidKaigi?</string>
     <string name="about_title">What is DroidKaigi?</string>
-    <string name="about_description">DroidKaigiはエンジニアが主役のAndroidカンファレンスです。\nAndroid技術情報の共有とコミュニケーションを目的に、2022年10月5日(水)〜7日(金)の3日間開催します。</string>
-    <string name="about_access">会場アクセス</string>
-    <string name="about_staff">スタッフリスト</string>
-    <string name="about_privacy">プライバシーポリシー</string>
-    <string name="about_license">ライセンス</string>
+    <string name="about_description">DroidKaigi is a conference that mainly treats Android Developer. \nIts purpose are sharing Android technical information and organize community among Android developer. This event will be  held between October 5th 2022 ~ October 7th 2022.</string>
+    <string name="about_access">Access</string>
+    <string name="about_staff">Staff List</string>
+    <string name="about_privacy">Privacy Policy</string>
+    <string name="about_license">License</string>
+    <string name="version">Version</string>
 </resources>
