add code conduct page

--- a/feature-about/src/main/res/values-en/strings.xml
+++ b/feature-about/src/main/res/values-en/strings.xml
@@ -7,4 +7,5 @@
     <string name="about_staff">Staff List</string>
     <string name="about_privacy">Privacy Policy</string>
     <string name="about_license">License</string>
+    <string name="about_code_conduct">Code Conduct</string>
 </resources>
