--- a/feature-about/src/main/res/values/strings.xml
+++ b/feature-about/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="about_staff">スタッフリスト</string>
     <string name="about_privacy">プライバシーポリシー</string>
     <string name="about_license">ライセンス</string>
+    <string name="about_code_conduct">行動規範</string>
 </resources>
