--- a/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 // About
 "About.Title" = "DroidKaigiとは";
 "About.WhatIsDroidKaigi" = "What is DroidKaigi?";
-"About.Description" = "DroidKaigiはエンジニアが主役のAndroidカンファレンスです。\nAndroid技術情報の共有とコミュニケーションを目的に、2022年10月5日(水)〜7日(金)の3日間開催します。";
+"About.Description" = "DroidKaigiはエンジニアが主役のカンファレンスです。\n技術情報の共有とコミュニケーションを目的に、2022年10月5日(水)〜7日(金)の3日間開催します。";
 "About.Access" = "会場アクセス";
 "About.Staffs" = "スタッフリスト";
 "About.PrivacyPolicy" = "プライバシーポリシー";
