[feature/add-app-version_#427] Add app-version to AboutView

--- a/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 "About.Staffs" = "スタッフリスト";
 "About.PrivacyPolicy" = "プライバシーポリシー";
 "About.License" = "ライセンス";
+"About.Version" = "アプリバージョン";
 
 "Notification.Title" = "Notification";
 "Map.Title" = "Floor Map";
