--- a/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 "About.Staffs" = "スタッフリスト";
 "About.PrivacyPolicy" = "プライバシーポリシー";
 "About.License" = "ライセンス";
+"About.Version" = "アプリバージョン";
 
 "Notification.Title" = "お知らせ";
 "Map.Title" = "フロアマップ";
