--- a/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 "Session.Material" = "Material";
 "Session.Slides" = "Slides";
 "Session.Movie" = "Movie";
+"Session.CancellMessage" = "このセッションは事情により中止となりました";
 
 // About
 "About.Title" = "DroidKaigiとは";
