--- a/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 "Session.Material" = "資料";
 "Session.Slides" = "スライド";
 "Session.Movie" = "MOVIE";
+"Session.CancellMessage" = "このセッションは事情により中止となりました";
 
 // About
 "About.Title" = "DroidKaigiとは";
