--- a/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
+++ b/app-ios/Sources/Strings/Resources/ja.lproj/Localizable.strings
@@ -24,3 +24,6 @@
 "Sponsor.Title" = "スポンサー";
 "Contributors.Title" = "Contributors";
 "Setting.Title" = "Setting";
+
+// Search
+"Search.Empty.Message" = "この検索条件に一致する結果はありません";
